--- a/aku-boleh.html
+++ b/aku-boleh.html
@@ -93,6 +93,8 @@ p{opacity:0;color:var(--warna-teks);font-size:15px;font-weight:700;line-height:1
 </style>
 <body>
 
+<body oncontextmenu='return false;' onkeydown='return false;' onmousedown='return false;'>
+
    <div id="bgbelakang">
      <!-- Wallpaper --><img src="https://feeldreams.github.io/nightin.jpeg"/>
    </div>
